--- a/index.html
+++ b/index.html
@@ -314,11 +314,17 @@
 					The more that you learn, the more places you'll go."
 				</h1>
 				<h1 class="font-medium text-3xl font-sans md:mb-0 mb-4 m-[20px]">
-					Dr. Seuss
+					- Dr. Seuss
 				</h1>
 			</div>
 		</div>
 		<!--* Footer + Newsletters -->
+		<footer
+			class="bg-transparent mx-auto max-w-6xl w-11/12 flex justify-between items-center h-[91px]"
+		>
+			
+			</div>
+		</footer>
 
 
 	</body>
